--- a/4-LCD1602/Objects/LCD1602.build_log.htm
+++ b/4-LCD1602/Objects/LCD1602.build_log.htm
@@ -18,18 +18,21 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.122.0.0
 Dialog DLL:      DP51.DLL V2.67.0.0 
 <h2>Project:</h2>
-D:\projects\C_89C52RC\3-动态数码管\数码管.uvproj
-Project File Date:  03/16/2022
+D:\projects\C_89C52RC\4-LCD1602\LCD1602.uvproj
+Project File Date:  03/19/2022
 
 <h2>Output:</h2>
 Build target 'Target 1'
+compiling main.c...
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?_DELAYNMS?DELAY
-Program Size: data=22.0 xdata=0 code=306
-creating hex file from ".\Objects\数码管"...
-".\Objects\数码管" - 0 Error(s), 1 Warning(s).
-Build Time Elapsed:  00:00:00
+    SEGMENT: ?PR?_LCD1602_SHOW_NUMBER?LCD1602
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?LCD1602_CLEAR?LCD1602
+Program Size: data=16.0 xdata=0 code=457
+creating hex file from ".\Objects\LCD1602"...
+".\Objects\LCD1602" - 0 Error(s), 2 Warning(s).
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
