--- a/5-矩阵键盘/Objects/project.build_log.htm
+++ b/5-矩阵键盘/Objects/project.build_log.htm
@@ -19,16 +19,20 @@ CPU DLL:         S8051.DLL V3.122.0.0
 Dialog DLL:      DP51.DLL V2.67.0.0 
 <h2>Project:</h2>
 D:\projects\C_89C52RC\5-æÿ’Ûº¸≈Ã\project.uvproj
-Project File Date:  03/27/2022
+Project File Date:  03/29/2022
 
 <h2>Output:</h2>
 Build target 'Target 1'
 compiling main.c...
+compiling LCD1602.c...
+compiling Delay.c...
+compiling MatrixKey.c...
+compiling MathUtils.c...
 linking...
 Program Size: data=30.0 xdata=0 code=1653
 creating hex file from ".\Objects\project"...
 ".\Objects\project" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
